# release-log

./: .dockerignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Dockerfile  LICENSE  README.ko.md  README.md  WORKFLOW_GUIDE.md  cli.py  core.py  docker-compose.yml  pyproject.toml  test.txt  version.txt
.github/: release.yml
.github/workflows/: docker-release.yml  release-please-alternative.yml  release-please.yml  release.yml
scripts/: check-release-status.sh
src/releaselog/: __init__.py  cli.py  core.py
